First version of working textchat

--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -1,6 +1,14 @@
 [supervisord]
 nodaemon=true
 
+[program:init]
+command=bash init.sh
+loglevel=debug
+stdout_logfile=/var/log/mycroft/skills.log
+stdout_logfile_maxbytes=0
+stderr_logfile=/var/log/mycroft/skill.log
+stderr_logfile_maxbytes=0
+
 [program:bus]
 command=python -m mycroft.messagebus.service
 loglevel=debug
@@ -31,11 +39,4 @@ loglevel=debug
 stdout_logfile=/var/log/mycroft/backend.log
 stdout_logfile_maxbytes=0
 stderr_logfile=/var/log/mycroft/backend.log
-stderr_logfile_maxbytes=0
-
-[program:logstream]
-command=tail -F /var/log/mycroft/*.log
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
