--- a/mycroft.conf
+++ b/mycroft.conf
@@ -1,5 +1,7 @@
 {
   "lang": "ca-es",
+  "date_format": "DMY",
+  "log_level": "DEBUG",
   "stt": {
     "module": "chromium_stt_plug",
     "chromium_stt_plug": {
@@ -13,15 +15,52 @@
       "encoding": "ISO-8859-15//TRANSLIT"
     }
   },
+  "location": {
+    "city": {
+      "code": "Barcelona",
+      "name": "Barcelona",
+      "state": {
+        "code": "BCN",
+        "name": "Barcelona",
+        "country": {
+          "code": "ES",
+          "name": "Spain"
+        }
+      }
+    },
+    "coordinate": {
+      "latitude": 41.3948976,
+      "longitude": 2.0787282
+    },
+    "timezone": {
+      "code": "Madrid/Spain",
+      "name": "Madrid/Spain",
+      "dstOffset": 7200000,
+      "offset": 3600000
+    }
+  },
   "skills": {
+    "msm": {
+      // Relative to "data_dir"
+      "directory": "skills",
+      "versioned": true,
+      "repo": {
+        // Relative to "data_dir"
+        "cache": ".skills-repo",
+        "url": "https://github.com/assistent-cat/habilitats",
+        "branch": "master"
+      }
+    },
     "blacklisted_skills": [
       "mycroft-npr-news.mycroftai",
       "mycroft-fallback-duck-duck-go.mycroftai",
       "mycroft-joke.mycroftai",
       "fallback-wolfram-alpha.mycroftai",
       "mycroft-volume.mycroftai",
-      "mycroft-pairing.mycroftai"
-    ]
+      "mycroft-pairing.mycroftai",
+      "mycroft-stock.mycroftai"
+    ],
+    "priority_skills": []
   },
   "listener": {
     "stand_up_word": "desperta"
@@ -44,21 +83,16 @@
   "max_allowed_core_version": 20.8,
   "Audio": {
     "backends": {
-      "local": {
-        "type": "simple",
-        "active": true
-      },
       "vlc": {
         "type": "vlc",
         "active": true,
         "duck": true,
         "vlc_options": "--no-video"
-      },
-      "mplayer": {
-        "type": "mplayer",
-        "active": false
       }
     },
     "default-backend": "vlc"
+  },
+  "enclosure": {
+    "platform": "ona"
   }
 }
