--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^12.19.11",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "antd": "^4.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "uuid": "^8.3.2",
+    "web-vitals": "^0.2.4",
+    "ws": "^7.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.7",
+    "@types/ws": "^7.4.0",
+    "prettier": "2.2.1"
   }
 }
