--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -13,10 +14,13 @@
     "antd": "^4.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "readable-stream": "^3.6.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2",
+    "watson-speech": "^0.38.1",
     "web-vitals": "^0.2.4",
     "ws": "^7.4.1"
   },
@@ -45,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "@types/styled-components": "^5.1.7",
     "@types/ws": "^7.4.0",
     "prettier": "2.2.1"
