--- a/mycroft.conf
+++ b/mycroft.conf
@@ -3,9 +3,13 @@
   "date_format": "DMY",
   "log_level": "DEBUG",
   "stt": {
-    "module": "chromium_stt_plug",
-    "chromium_stt_plug": {
-      "lang": "ca-ES"
+    "module": "vosk_streaming_stt_plug",
+    "vosk_streaming_stt_plug": {
+        "model_folder": "/opt/vosk/model",
+        "verbose": true
+    },
+    "vosk_stt_plug": {
+        "model_folder": "/opt/vosk/model"
     }
   },
   "tts": {
