--- a/mycroft.conf
+++ b/mycroft.conf
@@ -13,10 +13,12 @@
     }
   },
   "tts": {
-    "module": "festival",
-    "festival": {
-      "lang": "catalan",
-      "encoding": "ISO-8859-15//TRANSLIT"
+    "module": "catotron_tts_plug",
+    "catotron_tts_plug": {
+      "url": "http://catotron:9000/synthesize",
+      "pause_between_chunks": 0.6,
+      "cache_dir": "/tmp/catotron",
+      "cache_enabled": true
     }
   },
   "location": {
