Fix module urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/assistent-cat/mycroft-docker-catala
 [submodule "catotron-cpu"]
 	path = catotron-cpu
-	url = git@github-privat:assistent-cat/catotron-cpu.git
+	url = https://github.com/assistent-cat/catotron-cpu.git
 [submodule "vosk-server"]
 	path = vosk-server
 	url = https://github.com/ccoreilly/vosk-server.git
