--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -1,28 +1,12 @@
 [supervisord]
 nodaemon=true
 
-[program:init]
-command=bash init.sh
-loglevel=debug
-stdout_logfile=/var/log/mycroft/skills.log
-stdout_logfile_maxbytes=0
-stderr_logfile=/var/log/mycroft/skill.log
-stderr_logfile_maxbytes=0
-
 [program:bus]
 command=python -m mycroft.messagebus.service
 loglevel=debug
 stdout_logfile=/var/log/mycroft/bus.log
 stdout_logfile_maxbytes=0
 stderr_logfile=/var/log/mycroft/bus.log
-stderr_logfile_maxbytes=0
-
-[program:audio]
-command=python -m mycroft.audio
-loglevel=debug
-stdout_logfile=/var/log/mycroft/audio.log
-stdout_logfile_maxbytes=0
-stderr_logfile=/var/log/mycroft/audio.log
 stderr_logfile_maxbytes=0
 
 [program:skills]
@@ -34,7 +18,7 @@ stderr_logfile=/var/log/mycroft/skill.log
 stderr_logfile_maxbytes=0
 
 [program:backend]
-command=python /opt/backend/reloader.py
+command=python /opt/backend/main.py
 loglevel=debug
 stdout_logfile=/var/log/mycroft/backend.log
 stdout_logfile_maxbytes=0
