--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "microphone-stream": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.7.2",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "readable-stream": "^3.6.0",
