Fix backend imports and simplify docker build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,11 +11,11 @@ WORKDIR /opt/backend
 COPY --chown=ona ./requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY --chown=ona ./main.py ./main.py
-COPY --chown=ona ./listener.py ./listener.py
-COPY --chown=ona ./speaker.py ./speaker.py
+COPY --chown=ona ./ona_backend ./ona_backend
 COPY --chown=ona ./supervisord.conf /opt/mycroft/supervisord.conf
 COPY --chown=ona ./mycroft.conf /home/ona/.mycroft/mycroft.conf
+
+ENV PYTHONPATH="/opt/backend:${PYTHONPATH}"
 
 EXPOSE 5678
 
