--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -18,7 +18,7 @@ stderr_logfile=/var/log/mycroft/skill.log
 stderr_logfile_maxbytes=0
 
 [program:backend]
-command=python /opt/backend/main.py
+command=python -m ona_backend
 loglevel=debug
 stdout_logfile=/var/log/mycroft/backend.log
 stdout_logfile_maxbytes=0
