Add support for "hey, mycroft" wakeword

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,6 @@ RUN addgroup --gid 1001 --system ona && \
     chown -R ona:ona /opt && \
     chown -R ona:ona /var/log/mycroft
 
-USER ona
 WORKDIR /opt/backend
 
 COPY --chown=ona ./requirements.txt ./requirements.txt
@@ -15,8 +14,11 @@ COPY --chown=ona ./ona_backend ./ona_backend
 COPY --chown=ona ./supervisord.conf /opt/mycroft/supervisord.conf
 COPY --chown=ona ./mycroft.conf /home/ona/.mycroft/mycroft.conf
 
+RUN wget https://github.com/MycroftAI/mycroft-precise/releases/download/v0.3.0/precise-engine_0.3.0_x86_64.tar.gz && tar xvf precise-engine.tar.gz
+RUN wget https://github.com/MycroftAI/precise-data/raw/models/hey-mycroft.tar.gz && tar xvf hey-mycroft.tar.gz
 ENV PYTHONPATH="/opt/backend:${PYTHONPATH}"
 
+USER ona
 EXPOSE 5678
 
 WORKDIR /opt/mycroft
