--- a/k8s/components/backend/kustomization.yaml
+++ b/k8s/components/backend/kustomization.yaml
@@ -4,3 +4,15 @@ kind: Kustomization
 resources:
   - service.yaml
   - deployment.yaml
+  
+configMapGenerator:
+- files:
+  - mycroft.conf
+  name: mycroft-conf
+  options:
+    disableNameSuffixHash: true
+- files:
+  - identity2.json
+  name: mycroft-indentity2
+  options:
+    disableNameSuffixHash: true
