--- a/k8s/components/ingress/certificate.yaml
+++ b/k8s/components/ingress/certificate.yaml
@@ -7,6 +7,7 @@ spec:
   commonName: ona.assistent.cat
   dnsNames:
   - ona.assistent.cat
+  - pau.assistent.cat
   issuerRef:
     name: letsencrypt
     kind: Issuer
